# rust_grpc_website

./: LICENSE  README.md  docker-compose.yml
client/: Dockerfile  package-lock.json  package.json
client/express/: index.js  package-lock.json  package.json
client/public/: index.html  manifest.webmanifest
client/src/: index.js
client/src/css/: index.css
client/src/pages/: NoPage.js  Page.js  page_grpc_web_pb.js  page_pb.js
server/: Cargo.toml  Dockerfile  build.rs
server/proto/: page.proto
server/src/: main.rs
